<resources>
    <string name="a">Add bookmark</string>
    <string name="b">Add to homepage</string>
    <string name="c">Allow</string>
    <string name="d">Blank page</string>
    <string name="e">Block domain</string>
    <string name="f">Block link</string>
    <string name="g">Bookmarks</string>
    <string name="h">Press to view</string>
    <string name="i">Copy link</string>
    <string name="j">Copy download link</string>
    <string name="k">Copy link text</string>
    <string name="l">Copy text</string>
    <string name="m">Delete</string>
    <string name="n">Delete all</string>
    <string name="o">Delete</string>
    <string name="p">Refuse</string>
    <string name="q">Downloads</string>
    <string name="r">Edit this</string>
    <string name="s">Find in page</string>
    <string name="t">Full-screen</string>
    <string name="u">History</string>
    <string name="v">Block images</string>
    <string name="w">Incognito mode</string>
    <string name="x">Network log</string>
    <string name="y">Mark as ad</string>
    <string name="z">Modify</string>
    <string name="a0">New</string>
    <string name="a1">New tab</string>
    <string name="a2">Night mode</string>
    <string name="a3">Open in background</string>
    <string name="a4">Open in new tab</string>
    <string name="a5">Page info</string>
    <string name="a6">Desktop site</string>
    <string name="a7">Picture mode</string>
    <string name="a8">Play with…</string>
    <string name="a9">Preview</string>
    <string name="a_">Re-download</string>
    <string name="aa">Save image</string>
    <string name="ab">Save web page</string>
    <string name="ac">Saved web pages</string>
    <string name="ad">Send to the launcher</string>
    <string name="ae">Share</string>
    <string name="af">View source</string>
    <string name="ag">Tools</string>
    <string name="ah">Translate</string>
    <string name="ai">User-agent</string>
    <string name="aj">Unblock domain</string>
    <string name="ak">Unblock link</string>
    <string name="al">View image</string>
    <string name="am">Web page</string>
    <string name="an">Enabled: %1$d ads blocked, %2$s saved</string>
    <string name="ao">Add filter subscription</string>
    <string name="ap">Add filter</string>
    <string name="aq">Add script</string>
    <string name="ar">Added to homepage successfully</string>
    <string name="as">Download manager</string>
    <string name="at">User-agent</string>
    <string name="au">Chrome (PC)</string>
    <string name="av">Custom</string>
    <string name="aw">IE 11 (PC)</string>
    <string name="ax">Safari (iPhone)</string>
    <string name="ay">Nokia Browser</string>
    <string name="az">all sites</string>
    <string name="b0">Allow once</string>
    <string name="b1">It has already been set as default</string>
    <string name="b2">Always restore</string>
    <string name="b3">Via</string>
    <string name="b4">Ask first</string>
    <string name="b5">Back/Forward gesture</string>
    <string name="b6">Opacity of background</string>
    <string name="b7">Baidu</string>
    <string name="b8">Bing</string>
    <string name="b9">Block 3rd party cookies</string>
    <string name="b_">Ad blocking</string>
    <string name="ba">Blocked: %s\nRefresh to take effect.</string>
    <string name="bb">Block pop-up</string>
    <string name="bc">Blocked pop-up window</string>
    <string name="bd">Bookmarks exported to\n</string>
    <string name="be">Bookmarks data is too big to upload, but other data will be uploaded normally. Continue?</string>
    <string name="bf">Bookmarks exported successfully</string>
    <string name="bg">Bookmarks export</string>
    <string name="bh">It can be downloaded only from \"http\" or \"https\" URLs.</string>
    <string name="bi">It can only work with \"http\" or \"https\" URLs.</string>
    <string name="bj">Catalog</string>
    <string name="bk">Permission denied. Would you like to set it in settings now?</string>
    <string name="bl">Chinese</string>
    <string name="bm">Clear data</string>
    <string name="bn">Clear data on exit</string>
    <string name="bo">Cloud data server</string>
    <string name="bp">Service unavailable.</string>
    <string name="bq">Color mode</string>
    <string name="br">Auto-adjust color of toolbars</string>
    <string name="bs">Confirm to leave</string>
    <string name="bt">Connection timed out</string>
    <string name="bu">Contact us</string>
    <string name="bv">Close</string>
    <string name="bw">We\'re sorry that the app crashed.</string>
    <string name="bx">Something went wrong. :(</string>
    <string name="by">Restart</string>
    <string name="bz">Upload the crash log</string>
    <string name="c0">Current language</string>
    <string name="c1">Add custom CSS</string>
    <string name="c2">Custom filter</string>
    <string name="c3">Custom filters</string>
    <string name="c4">Including custom filters, marked ads</string>
    <string name="c5">Custom URL</string>
    <string name="c6">Cache</string>
    <string name="c7">Data cleared</string>
    <string name="c8">Cookies</string>
    <string name="c9">Data exported successfully</string>
    <string name="c_">Data export</string>
    <string name="ca">Form data</string>
    <string name="cb">History</string>
    <string name="cc">Web storage</string>
    <string name="cd">Default</string>
    <string name="ce">Bookmarks in folder %s will also be deleted. Are you sure?</string>
    <string name="cf">Failed to delete. The file is located in download path:</string>
    <string name="cg">Back</string>
    <string name="ch">File</string>
    <string name="ci">Forward</string>
    <string name="cj">Home</string>
    <string name="ck">Menu</string>
    <string name="cl">Reload</string>
    <string name="cm">Find in page</string>
    <string name="cn">Suggestion</string>
    <string name="co">Tab</string>
    <string name="cp">Would you like to mark this as ad?</string>
    <string name="cq">Would you like to download this file?</string>
    <string name="cr">Message</string>
    <string name="cs">Message from %s</string>
    <string name="ct">Are you sure you want to proceed?</string>
    <string name="cu">Disabled</string>
    <string name="cv">Don\'t restore</string>
    <string name="cw">Do not track</string>
    <string name="cx">Donate</string>
    <string name="cy">If you like Via browser, you can donate to support us.\nAlipay: 2376688759@qq.com\nPayPal: wiar1824@gmail.com</string>
    <string name="cz">Download location</string>
    <string name="d0">Download completed</string>
    <string name="d1">Download failed</string>
    <string name="d2">USB storage is required to download the file.</string>
    <string name="d3">No memory card</string>
    <string name="d4">Download notification</string>
    <string name="d5">Starting download…</string>
    <string name="d6">Storage is busy. To allow downloads, select \"Turn Off USB Storage\" in the notification panel.</string>
    <string name="d7">USB storage is unavailable</string>
    <string name="d8">DuckDuckGo</string>
    <string name="d9">Edit filter subscription</string>
    <string name="d_">Empty</string>
    <string name="da">Please input your password</string>
    <string name="db">Please input your username</string>
    <string name="dc">Enable built-in filters</string>
    <string name="dd">Built-in filters only block common ads</string>
    <string name="de">Enable site configuration for %s</string>
    <string name="df">Export bookmarks</string>
    <string name="dg">Export data</string>
    <string name="dh">Export data to: %s</string>
    <string name="di">The file does not exist</string>
    <string name="dj">File size</string>
    <string name="dk">The filter subscription already exists.</string>
    <string name="dl">%s, %s</string>
    <string name="dm">Filter subscriptions</string>
    <string name="dn">Subscribe Adblock Plus filter lists</string>
    <string name="do">Find next</string>
    <string name="dp">Find last</string>
    <string name="dq">Force close</string>
    <string name="dr">Enable force zoom</string>
    <string name="ds">Auto-hide toolbars</string>
    <string name="dt">Disabled</string>
    <string name="du">Scroll to hide/show</string>
    <string name="dv">Press to hide/show</string>
    <string name="dw">Get more scripts</string>
    <string name="dx">Glean</string>
    <string name="dy">Global</string>
    <string name="dz">Google</string>
    <string name="e0">Haosou</string>
    <string name="e1">has not been updated</string>
    <string name="e2">Help</string>
    <string name="e3">Help us translate</string>
    <string name="e4">Folder</string>
    <string name="e5">Password</string>
    <string name="e6">Tags</string>
    <string name="e7">Title</string>
    <string name="e8">URL</string>
    <string name="e9">Username</string>
    <string name="e_">You\'ve gone incognito. History will not be recorded.</string>
    <string name="ea">Homepage</string>
    <string name="eb">HTML code</string>
    <string name="ec">Ignore secondary SSL error</string>
    <string name="ed">Ignore SSL error today</string>
    <string name="ee">Show images only via Wi-Fi</string>
    <string name="ef">Show images</string>
    <string name="eg">Block images</string>
    <string name="eh">Import bookmarks</string>
    <string name="ei">Import bookmarks</string>
    <string name="ej">Couldn\'t import bookmarks from file!</string>
    <string name="ek">Import data</string>
    <string name="el">Failed to import data!</string>
    <string name="em">Data imported successfully!</string>
    <string name="en">Import/Export bookmarks</string>
    <string name="eo">Would you like to import the filter for blocking ads of %1$s from the clipboard?</string>
    <string name="ep">Would you like to import script for %1$s from the clipboard?\nWarning: script can be dangerous. Please make sure it is safe.\nScript:\n</string>
    <string name="eq">Imported successfully</string>
    <string name="er">Would you like to open link from the clipboard?\nLink: %1$s</string>
    <string name="es">Incognito is disabled</string>
    <string name="et">You\'ve gone incognito</string>
    <string name="eu">Install</string>
    <string name="ev">Installation successful!</string>
    <string name="ew">Enable JavaScript</string>
    <string name="ex">just now</string>
    <string name="ey">Learn more</string>
    <string name="ez">Leave</string>
    <string name="f0">Location access</string>
    <string name="f1">Location: for sites like Google Maps, it is disabled by default. When it is enabled, a pop-up is displayed asking if the site may use your location.\n\n</string>
    <string name="f2">Log out?</string>
    <string name="f3">Blocked list is in %1$s.\nYou can edit the list, or long-press the following item to enable/disable its blockade.</string>
    <string name="f4">long ago</string>
    <string name="f5">Bookmark added successfully</string>
    <string name="f6">The date of the site\'s certificate is invalid. Proceed anyway?</string>
    <string name="f7">Including the downloaded file</string>
    <string name="f8">Delete this downloaded task?</string>
    <string name="f9">Downloaded file will also be deleted. Are you sure?</string>
    <string name="f_">Press one more time to exit</string>
    <string name="fa">The certificate of the site has expired. Proceed anyway?</string>
    <string name="fb">Would you like to resend the data?</string>
    <string name="fc">The certificate of the site doesn\'t match the hostname. Proceed anyway?</string>
    <string name="fd">Bookmarks imported</string>
    <string name="fe">The certificate of the site is invalid. Proceed anyway?</string>
    <string name="ff">\nWould like to use your location</string>
    <string name="fg">The certificate of the site is not yet valid. Proceed anyway?</string>
    <string name="il">Form resubmission</string>
</resources>