<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="?attr/c" android:layout_width="match_parent" android:layout_height="wrap_content">
    <CheckBox android:id="@+id/n" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:checked="true" android:button="@drawable/h" android:text="@string/de" style="@style/l"/>
    <TextView android:id="@+id/b4" android:paddingLeft="10dp" android:paddingTop="8dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/ai" style="@style/l"/>
    <TextView android:id="@+id/b3" android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingBottom="8dp" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/at" style="@style/k"/>
    <EditText android:textSize="@dimen/p" android:textColor="?attr/h" android:textColorHint="?attr/i" android:gravity="top" android:id="@+id/p" android:background="@android:color/transparent" android:paddingLeft="5dp" android:paddingTop="10dp" android:paddingRight="5dp" android:paddingBottom="5dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:hint="@string/at" android:maxLines="1" android:lines="1" android:singleLine="true" android:selectAllOnFocus="true" android:inputType="none"/>
    <View android:id="@+id/q" android:background="@color/a4" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:layout_marginBottom="5dp"/>
    <CheckBox android:id="@+id/i" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:button="@drawable/h" android:text="@string/a6" style="@style/l"/>
    <CheckBox android:id="@+id/h" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:button="@drawable/h" android:text="@string/eg" style="@style/l"/>
    <CheckBox android:id="@+id/g" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:button="@drawable/h" android:text="@string/b_" style="@style/l"/>
    <CheckBox android:id="@+id/m" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:button="@drawable/h" android:text="@string/ew" style="@style/l"/>
</LinearLayout>
